syntax = "proto3";

package download;

service DownloadService {
  rpc DownloadFile (DownloadRequest) returns (stream FileChunk);
}

message DownloadRequest {
  int32 fileId = 1;
}

message FileChunk {
  bytes data = 1;
}
